# rdir

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: args.rs  common.rs  main.rs
src/client/: mod.rs
src/common/: framing.rs  ipc.rs  mod.rs  shares.rs
src/server/: ipc.rs  mod.rs  net.rs  peer.rs  setup.rs  swarm.rs
src/server/peer/: call.rs  conn.rs  mod.rs
src/server/state/: error.rs  mod.rs
src/server_old/: messages.rs
src/server_old/state/: mod.rs
