[package]
name = "rdir"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.101"
async-broadcast = "0.7.2"
backoff = "0.4.0"
bitcode = "0.6.9"
clap = { version = "4.5.57", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["full"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
lz4 = "1.28.1"
nix = { version = "0.31.1", features = ["fs", "process"] }
smol = "2.0.2"
smol-timeout = "0.6.1"
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "local-time", "registry", "std"] }
