[package]
name = "rdir"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0.101"
bitcode = "0.6.9"
clap = { version = "4.5.57", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["full"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "std"] }
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "macros", "tokio", "full"] }
libp2p-stream = "0.4.0-alpha"
lz4 = "1.28.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "local-time", "registry", "std"] }
