[package]
name = "rdir"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1.0.101"
backoff = "0.4.0"
base58 = "0.2.0"
bimap = "0.6.3"
bitcode = "0.6.9"
blake2 = "0.10.6"
clap = { version = "4.5.57", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["full"] }
dirs = "6.0.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await", "std"] }
lz4 = "1.28.1"
nix = { version = "0.31.1", features = ["fs", "process", "user"] }
snowstorm = "0.4.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec", "compat", "io", "time"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "local-time", "registry", "std"] }
yamux = "0.13.8"
